testdata/golden/sema/invalid/extern_duplicate_method.sg
// scenario: duplicate method signatures inside one extern<int> block
extern<int> {
    fn touch(self: int) -> int { return self; }
    fn touch(self: int) -> int { return self; }
}
